src/test/deca/context/invalid/field_init_string.deca
// Description:
//    Test d'une déclaration d'un champ initialisé à une chaîne de caractères
//
// Résultats:
//    Ligne 12 : Affectation à un objet de type int une valeur de type string impossible (règle 3.28)
//
// Historique:
//    créé le 21/01/2017


class A {
  int x = "Hello";
}
